TP_Integrador/Parte 2/K8s/coordinador-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: block-processor
  labels:
    app: block-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: block-processor
  template:
    metadata:
      labels:
        app: block-processor
    spec:
      containers:
        - name: block-processor
          image: josuegaticaodato/coordinador:latest
          imagePullPolicy: Always
          command: ["python", "-m", "Coordinador.processor"]

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
