TP_Integrador/Parte 2/K8s/pool-manager-services.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pool-manager
  labels:
    app: pool-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pool-manager
  template:
    metadata:
      labels:
        app: pool-manager
    spec:
      serviceAccountName: pool-manager-sa
      containers:
        - name: pool-manager
          image: josuegaticaodato/pool_manager:latest
          imagePullPolicy: Always
