TP_Integrador/Parte 2/K8s/coordinador-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coordinador
  labels:
    app: coordinador
spec:
  replicas: 3
  selector:
    matchLabels:
      app: coordinador
  template:
    metadata:
      labels:
        app: coordinador
    spec:
      containers:
        - name: coordinador
          image: josuegaticaodato/coordinador:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /status/live
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /status/live
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20


---
apiVersion: v1
kind: Service
metadata:
  name: coordinador
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: coordinador
  type: ClusterIP
