TP_Integrador/Parte 2/K8s/rabbit-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-headless
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
    - name: epmd
      port: 4369
      targetPort: 4369
    - name: distribution
      port: 25672
      targetPort: 25672

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: rabbitmq-headless
  replicas: 3
  podManagementPolicy: Parallel

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      nodeSelector:
        role: infra

      terminationGracePeriodSeconds: 120

      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: rabbitmq
              topologyKey: kubernetes.io/hostname

      containers:
        - name: rabbitmq
          image: rabbitmq:4.2-management
          imagePullPolicy: IfNotPresent

          ports:
            - name: amqp
              containerPort: 5672
            - name: management
              containerPort: 15672
            - name: epmd
              containerPort: 4369
            - name: distribution
              containerPort: 25672

          startupProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - -q
                - ping
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 30

          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - -q
                - check_running
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - -q
                - ping
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi

          volumeMounts:
            - name: config
              mountPath: /etc/rabbitmq/conf.d/30-cluster.conf
              subPath: rabbitmq.conf

            - name: config
              mountPath: /etc/rabbitmq/enabled_plugins
              subPath: enabled_plugins

            - name: data
              mountPath: /var/lib/rabbitmq

      volumes:
        - name: config
          configMap:
            name: rabbitmq-ha-config

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 10Gi

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672

    - name: management
      port: 15672
      targetPort: 15672
